Cherry-pick 272951@main (cc8a261932c7). https://bugs.webkit.org/show_bug.cgi?id=266559

Safari periodically erasing LocalStorage and IndexedDB for all websites
    https://bugs.webkit.org/show_bug.cgi?id=266559
    rdar://119818267

    Reviewed by Sihui Liu.

    Data eviction will delete website data for all origins if the total disk usage exceeds the total quota.
    `m_totalQuota` is set in `NetworkStorageManager::spaceGrantedForOrigin()`, and will only be set if
    `m_totalQuota` is zero. However, `m_totalQuota` is never initialized, so it's possible for it to have a
    non-zero value which is less than the current disk usage. This situation prevents the variable from ever
    being initialized in `NetworkStorageManager::spaceGrantedForOrigin()` and results in the deletion of all
    website data.

    This change addresses the issue by making `m_totalQuota` optional, ensuring the value is always null when
    `NetworkStorageManager::spaceGrantedForOrigin()` is initially called.

    * Source/WebKit/NetworkProcess/storage/NetworkStorageManager.cpp:
    (WebKit::NetworkStorageManager::spaceGrantedForOrigin):
    (WebKit::NetworkStorageManager::performEviction):
    * Source/WebKit/NetworkProcess/storage/NetworkStorageManager.h:

    Canonical link: https://commits.webkit.org/272951@main